force-app/main/default/objects/Bank__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>