force-app/main/default/objects/Bank__c/fields/BankAddress__c.field-meta.xml
<CustomField>
    <fullName>BankAddress__c</fullName>
    <label>Bank Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>