force-app/main/default/objects/Bank__c/fields/IsUsedInPaymentGateway__c.field-meta.xml
<CustomField>
    <fullName>IsUsedInPaymentGateway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Used In Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>