force-app/main/default/objects/Bank__c/validationRules/RecheckIsActive.validationRule-meta.xml
<ValidationRule>
    <fullName>RecheckIsActive</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
  IsDefault__c = true,
  IsActive__c = false 
)</errorConditionFormula>
    <errorDisplayField>IsDefault__c</errorDisplayField>
    <errorMessage>If set as the default, this record must be active.</errorMessage>
</ValidationRule>