force-app/main/default/objects/Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BankName__c</columns>
    <columns>BankAccountNumber__c</columns>
    <columns>BankBranch__c</columns>
    <columns>Project__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsDefault__c</columns>
    <columns>SWIFTCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>